Enable the 'logical-op' gcc warning and fix it's occurrences.

The code was broken in both places where the warning was signalled. We
should let KDAB know about the KDChart issue.

BUG: 337796