kmymoney/widgets/register.cpp
@@ -1748,10 +1748,8 @@ void Register::selectRange(RegisterItem* from, RegisterItem* to, bool invert, bo
         }
       } else {
         bool sel = !item->isSelected();
-        if ((item->isSelected() != sel) && (sel || !sel)) {
-          if (item->isVisible()) {
-            item->setSelected(sel);
-          }
+        if ((item->isSelected() != sel) && item->isVisible()) {
+          item->setSelected(sel);
         }
       }
     }
